// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen tests View Shows 'Cargando...' when the user is not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 10,
    }
  }
>
  <Text>
     Cargando... 
  </Text>
</View>
`;

exports[`HomeScreen tests View Shows 'Se ha producido un error...' when the fetch failed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 10,
    }
  }
>
  <Text>
     Se ha producido un error 
  </Text>
</View>
`;

exports[`HomeScreen tests View Shows everything when the user is loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#332554",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 22,
          "marginTop": 30,
          "textAlign": "left",
          "width": 390,
        }
      }
    >
      Mi turno de Febrero
    </Text>
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 20,
          "elevation": 15,
          "height": 90,
          "marginTop": 10,
          "overflow": "hidden",
          "width": 400,
        }
      }
    />
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <ExponentLinearGradient
      colors={
        Array [
          4279286482,
          4280914167,
        ]
      }
      endPoint={
        Array [
          0.65,
          1,
        ]
      }
      startPoint={
        Array [
          0.55,
          0,
        ]
      }
      style={
        Object {
          "borderRadius": 20,
          "elevation": 15,
          "flexDirection": "row",
          "height": 120,
          "justifyContent": "space-evenly",
          "marginTop": 20,
          "padding": 10,
          "width": 400,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "montserrat-extra-bold",
            "fontSize": 21,
            "marginTop": 10,
            "textAlign": "left",
          }
        }
      >
        VER TURNO GLOBAL
      </Text>
      <Image
        source={1}
        style={
          Object {
            "height": 100,
            "width": 100,
          }
        }
      />
    </ExponentLinearGradient>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 400,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <ExponentLinearGradient
        colors={
          Array [
            4294954035,
            4294089034,
          ]
        }
        endPoint={
          Array [
            0.65,
            1,
          ]
        }
        startPoint={
          Array [
            0.55,
            0,
          ]
        }
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 20,
            "elevation": 15,
            "height": 80,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 190,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#3f2606",
              "fontFamily": "montserrat-extra-bold",
              "fontSize": 20,
              "textAlign": "left",
            }
          }
        >
          MIS CAMBIOS
        </Text>
      </ExponentLinearGradient>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <ExponentLinearGradient
        colors={
          Array [
            4279286482,
            4278481116,
          ]
        }
        endPoint={
          Array [
            0.65,
            1,
          ]
        }
        startPoint={
          Array [
            0.55,
            0,
          ]
        }
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 20,
            "elevation": 15,
            "height": 80,
            "justifyContent": "center",
            "marginTop": 20,
            "width": 190,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontFamily": "montserrat-extra-bold",
              "fontSize": 20,
              "textAlign": "left",
            }
          }
        >
          CONTACTOS
        </Text>
      </ExponentLinearGradient>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#3b2868",
        "fontFamily": "montserrat-extra-bold",
        "fontSize": 22,
        "marginTop": 30,
        "textAlign": "left",
        "width": 390,
      }
    }
  >
    Peticiones de cambio
  </Text>
</View>
`;
